add second data-algo-transitions fig

--- a/PROJECT.org
+++ b/PROJECT.org
@@ -69,6 +69,7 @@ ways.
 
 #+CAPTION: A simple software/data evolution example
 [[./Figures/data-algo-transitions.png]]
+[[./Figures/data-algo-transitions-2.png]]
 
 *** Meta-analyses
 
