first ItS draft

--- a/PROJECT.org
+++ b/PROJECT.org
@@ -1,77 +1,10 @@
 #+TITLE: Building a dynamic, executable and discoverable network of interlinked software and data
 
-Software is central in scientific research engineering. But more
-importantly than in other engineering disciplines, the RSE products
-live and evolve in an highly dynamic and cross-disciplinary
-environment, resulting in risks to fade out very quickly and
-opportunities to cross initial domain boundaries. This project aims at
-developing infrastructure to support some major contemporary
-challenges of modern data-driven science, i.e. and set up an open
-digital information infrastructure using automation and
-standardisation as primary force to enable broader and more open
-dissemination, application, impact and creativity of research software
-engineering outputs
+See [[file:IntentToSubmit.md][Intent to submit]]
 
-Modern science relies on ever increasing quantities of data (becoming
-more plentiful, bigger, different and researchers implement ways to
-interrogate it - some have coined it the data deluge) and on
-trustworthy and sustainable software to analyse, understand and
-interpret them. Each of these pillars of modern scientific activities
-are generally developed and maintained independently. On one hand, a
-typical data pipeline starts with a data producer submitting these
-annotated data to an official repository that, after some basic
-curation, serves it to the wider community. This flow is
-unidirectional and restricted to published (or soon to be published)
-data and, once part of the official repository, becomes inert (updates
-and further annotations are very rare) and, most often, dormant. On
-the other hand, the exposure of a research software is often limited
-by the application (or applicability) to a reduced set of known data
-sets, and hence limited to the original team or
-sub-community. Surprisingly, while each data/software information and
-development streams can't be conceived in isolation, and their true
-potential emerges from their interoperation, little effort exist to
-facilitate streamlined interactions and discoverability. The ideal
-infrastructure would enable transparent integration of different data
-source (local or remote, public or private), data sets (transparent to
-file formats) through data APIs and software architectures (local or
-remote) through software APIs/pipelines. The novel potential, other
-than re-use of data and software and potential for automation, the
-novelty is discoverability of data and software leading to new
-applications and use cases (from data and software perspectives) and
-contributing these back as novel, publicly available data/software
-meta-analyses.
-
-
-A recent project involved developing, implementing and applying a
-transfer learning algorithm that learns from different data sources to
-classify features. In our specific question, the classification is
-aimed at inferring the spatial sub-cellular localisation of proteins
-using experimental data (primary data source) and gene ontology
-annotation data (auxiliary data source). Our algorithm was initially
-inspired from a leaves classification problem (using bio-metrical
-measurement from fresh and dried specimens) and was improved and
-adapted for spatial proteomics use cases. We would like to apply it to
-another domain, genomics data being an obvious candidate. How should
-we proceed?  Look for something relevant in the literature, ask
-colleagues, ... none of these approaches are effective and
-substantially slow cross-fertilisation between domains and high rates
-of duplication. 
-
-The transition from the first publication of the algorithm in the
-International Conference on Machine Learning (ICML) and leaves
-biometry data to an updated implementation (Biocondutor pRoloc
-software package) and application to 5 proteomics data sets initially
-relied on a fortuitous and fortunate discovery. What further
-transitions and improvements can be anticipated?  If the immediate
-transition are prohibitively slow or difficult, the dissemination,
-improvement and generalisation of the software is dramatically
-limited. The project's goal is to offer systematic ways to enable such
-transitions.
-
-
-#+CAPTION: A simple software/data evolution example
-[[./Figures/data-algo-transitions.png]]
-[[./Figures/data-algo-transitions-2.png]]
+#+caption: a simple software/data evolution example
+[[./figures/data-algo-transitions.png]]
+[[./figures/data-algo-transitions-2.png]]
 
 *** Meta-analyses
 
