ropensci is a great data/pub resource

--- a/PROJECT.org
+++ b/PROJECT.org
@@ -87,3 +87,5 @@ this.
 - [[https://scicrunch.org/resources][Research Resources ID]]
 
 
+- *rOpenSci* for data, pubs full text repos
+  [[https://www.youtube.com/watch?t=104&v=xi_njsuUxbA][Reproducible Open Science with R]]
